--- a/MyCompany.Portal.Core/MyCompany.Portal.Core.csproj
+++ b/MyCompany.Portal.Core/MyCompany.Portal.Core.csproj
@@ -79,9 +79,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITaskRepository.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="PortalConsts.cs" />
     <Compile Include="PortalCoreModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
