--- a/MyCompany.Portal.Core/MyCompany.Portal.Core.csproj
+++ b/MyCompany.Portal.Core/MyCompany.Portal.Core.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="ITaskRepository.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="PortalConsts.cs" />
